# ros-fbdl-simulator

./: README.md  simulation.db
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Canvas.msg  Distance.msg  Fbdl.msg  Inputs.msg  Obstacles.msg  Outputs.msg  Position.msg  SpecObject.msg  Target.msg
custom_msgs/srv/: Agents.srv  CanvasDimensions.srv  ChangeColor.srv  ChangeDimensions.srv  CreateObstacle.srv  CreateSpecialObject.srv  DeleteObstacle.srv  Error.srv  Fbdl.srv  Follow.srv  NameService.srv  NewAgent.srv  Stop.srv  Universes.srv  Weight.srv
ros2_fuzzy/: package.xml  setup.cfg  setup.py
ros2_fuzzy/launch/: simulation_controller.py
ros2_fuzzy/ros2_fuzzy/: agent.py  agent_spawner.py  box.py  object.py  sensor.py
web_ros2/: package-lock.json  package.json
web_ros2/src/: server.js  simulation.db
web_ros2/src/public/: my_data.json
web_ros2/src/public/css/: index.css
web_ros2/src/public/html/: index.html
web_ros2/src/public/js/: agent.js  entity.js  main.js  obstackle.js  ros.js  special_object.js
web_ros2/src/public/maps/: 4.json  behaviour_test.json  ffff.json  minimal.json  new.json  object_position.json  object_positions (4).json  object_positions2.json  object_positions3.json  object_positions_normalized.json  test.json  test2.json
